crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_unary_not.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 339
expression: "format_with_errors(\"RETURN NOT a\")"
---
SOURCE_FILE@0..12
  STATEMENT@0..12
    RETURN_CLAUSE@0..12
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..12
        RETURN_ITEMS@6..12
          RETURN_ITEM@6..12
            UNARY_EXPR@6..12
              WHITESPACE@6..7 " "
              NOT_KW@7..10 "NOT"
              VAR_EXPR@10..12
                WHITESPACE@10..11 " "
                IDENT@11..12 "a"
