crates/cyrs-syntax/tests/snapshots/syntax_snapshots__multi_stmt_empty_file.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"\")"
---
SOURCE_FILE@0..0
