crates/cyrs-syntax/tests/snapshots/syntax_snapshots__multi_stmt_single_trailing_semi.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN 1;\")"
---
SOURCE_FILE@0..9
  STATEMENT@0..8
    RETURN_CLAUSE@0..8
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..8
        RETURN_ITEMS@6..8
          RETURN_ITEM@6..8
            LITERAL_EXPR@6..8
              WHITESPACE@6..7 " "
              INT_LITERAL@7..8 "1"
  SEMI@8..9 ";"
